@@ -1,4 +1,8 @@
-Changes on version 1.1.3 (current):
+Changes on version 1.1.4 (current):
+- Add NSMutableCopying protocol to NSNumber.
+- Add NSMutableCopying protocol to NSMutableNumber
+
+Changes on version 1.1.3:
 - Tests small fix.
 
 Changes on version 1.1.2:
